[package]
name = "deep-space-indexing-demo"
version = "0.1.0"
edition = "2021"
authors = ["Justin Kilpatrick (justin@althea.net)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
base64 = "0.21.0"
actix-web = "4.0.0-beta.10"
actix-rt = "2.5.0"
serde_json = "1.0"
tokio = {version="1", features=["rt-multi-thread"]}
deep_space = "2"
cosmos-sdk-proto-althea = "0.13"
futures = "0.3"
sha256 = "1"
prost-types ="0.10"
lazy_static = "1.4"
rocksdb = "0.20.1"