[package]
name = "deep-space-indexing-demo"
version = "0.1.0"
edition = "2021"
authors = ["Justin Kilpatrick (justin@althea.net)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gravity_utils = {git = "https://github.com/gravity-bridge/gravity-bridge", rev="ea35ec51aa921f60bb0911bd5482f12a438241e0"}
gravity_proto = {git = "https://github.com/gravity-bridge/gravity-bridge", rev="ea35ec51aa921f60bb0911bd5482f12a438241e0"}
tokio = {version="1", features=["rt-multi-thread"]}
deep_space = "2.17.1"
cosmos-sdk-proto-althea = "0.13"
futures = "0.3"
sha256 = "1"
prost-types ="0.10"
lazy_static = "1.4"
openssl-probe = "0.1"
serde_derive = "1"
serde = { version = "1.0", features = ["derive"] }
rocksdb = "0.20.1"
warp = "0.3"
serde_json = "1.0"